# spectral

./: README.md  pyproject.toml
demo/: run_demo.py
src/spectral/: __init__.py  __main__.py  analysis.py  cli.py  generator.py  parser.py  signal.py  visualize.py
tests/: test_analysis.py  test_cli.py  test_generator.py  test_new_features.py  test_parser.py  test_signal.py  test_visualize.py
