[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral"
version = "0.1.0"
description = "Frequency-domain log analysis — find hidden periodicities in your logs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
spectral = "spectral.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
